@@ -1,5 +1,5 @@
 /* Voikkohyphenate: Testing tool for libvoikko
- * Copyright (C) 2006 Harri Pitkänen <hatapitk@iki.fi>
+ * Copyright (C) 2006 - 2008 Harri Pitkänen <hatapitk@iki.fi>
  *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License
@@ -159,7 +159,7 @@ void split_sentences(int handle, const char * line) {
 			}
 			sentencechars--;
 		}
-		printf("\"\n");
+		printf("\n");
 	}
 }
 
