@@ -1,1 +1,2 @@
 Kissa ja koira.
+Ulkona paistaa aurinko. On lämmintä.
