@@ -1,1 +1,3 @@
 E: Kissa ja koira.
+B: Ulkona paistaa aurinko. 
+E: On lämmintä.
